...

    suspend fun getAllTeamsSync(): List<TeamEntity> = lineupDao.getAllTeamsSync()

    suspend fun getTeam(id: String) = lineupDao.getTeamById(id)

    suspend fun saveTeam(id: String, name: String, titulares: List<PlayerData>, suplentes: List<PlayerData>) {
        val team = TeamEntity(
            id = id,
            name = name,
            titulares = titulares,
            suplentes = suplentes,
            lastUpdated = System.currentTimeMillis()
        )
...
